synaptic (0.75.7) UNRELEASED; urgency=low

  * common/rpackage.cc:
    - fix reading multiarch file list (LP: #960250)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 20 Mar 2012 16:43:21 +0100

synaptic (0.75.6) unstable; urgency=low

  * fix segfault for packages without VerFile attribute, thanks to
    Hans-Georg Bork, closes: #663016

 -- Michael Vogt <mvo@debian.org>  Mon, 12 Mar 2012 22:08:32 +0100

synaptic (0.75.5) unstable; urgency=low

  * common/rpackagelister.cc:
    - simplify openCache() code to use more modern std::vector features
      and fix crash along the way (LP: #936677)
  * common/sections_trans.cc:
    - add "metapackages", "education", "introspection"
  * debian/rules:
    - do not build multiarch support in Debian to make it work on 
      unstable that has no multiarch apt yet

 -- Michael Vogt <mvo@debian.org>  Fri, 02 Mar 2012 10:20:59 +0100

synaptic (0.75.5~exp6) experimental; urgency=low

  * unless the config option "Synaptic::InlineScreenshots" is set
    to true do not show the tiny screenshot thumbnails inline but
    instead download the big screenshot and show it in a window when
    clicking on the "Show screenshot" button
  * gtk/gtkbuilder/window_main.ui:
    - fix "can_focus" property of entry_fast_search from false to
      true. Looks like glade messed this up.

 -- Michael Vogt <mvo@debian.org>  Mon, 13 Feb 2012 17:50:45 +0100

synaptic (0.75.5~exp5) experimental; urgency=low

  * common/rpackage.cc:
    - use SetCandidateRelease() when forcing a version to ensure
      that experimental/backports work better
  * common/rpackageview.cc:
    - add subview for not-automatic package in the origins filter,
      this is useful for e.g. debian/experimental or ubuntu-backports
      Note that you need to force the version using the menu:
     "Package/Force Version"

 -- Michael Vogt <mvo@debian.org>  Wed, 08 Feb 2012 21:21:43 +0100

synaptic (0.75.5~exp4) experimental; urgency=low
