@@ -6,6 +6,7 @@ Build-Depends: debhelper (>= 8), libapt-pkg-dev, gettext, libgtk2.0-dev, libvte-
 Build-Conflicts: librpm-dev
 Standards-Version: 3.7.2.2
 Vcs-Bzr: https://code.launchpad.net/~synaptic-developers/synaptic/trunk
+X-Ubuntu-Use-Langpack: yes
 
 Package: synaptic
 Architecture: any
