@@ -43,6 +43,11 @@ override_dh_auto_build:
 	cp debian/patches/00list.$(DIST) debian/patches/00list
 	dpatch apply-all
 	dh_auto_build
+	# ubuntu specific for universe langpacks but will not do any
+	#  harm on debian
+	if [ -x /usr/bin/dh_translations ]; then \
+	  dh_translations; \
+	fi;
 
 # unpatch
 override_dh_auto_clean:
