@@ -2,6 +2,11 @@ synaptic (0.75.7) UNRELEASED; urgency=low
 
   * common/rpackage.cc:
     - fix reading multiarch file list (LP: #960250)
+  * debian/control:
+    - add X-Ubuntu-Use-Langpack to enable langpack support
+  * debian/rules:
+    - run dh_translations if available, this will enable langpack
+      support
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 20 Mar 2012 16:43:21 +0100
 
